--- a/web/htdocs/index.html
+++ b/web/htdocs/index.html
@@ -13,8 +13,9 @@
   <p>Place your HTML content here!</p>
   <p>or browse one of the default endpoints:</p>
   <ul>
-      <li><a href="/cgi-bin/qgis_mapserv.fcgi?MAP=/web/projects/helloworld.qgs&SERVICE=WMS&REQUEST=GetProjectsettings">CGI</a></li>
+      <li><a href="/cgi-bin/qgis_mapserv.cgi?MAP=/web/projects/helloworld.qgs&SERVICE=WMS&REQUEST=GetProjectsettings">CGI</a></li>
       <li><a href="/cgi-bin/qgis_mapserv.fcgi?MAP=/web/projects/helloworld.qgs&SERVICE=WMS&REQUEST=GetProjectsettings">Fast CGI</a></li>
+      <li><a href="/cgi-bin/show.cgi">Show CGI environment variables</a></li>
   </ul>
   </body>
 </html>
