Added OAuth2 test server and removed WPS plugin

--- a/web/htdocs/index.html
+++ b/web/htdocs/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta charset="utf-8">
     <title></title>
     <meta content="">
     <style>
@@ -18,6 +19,7 @@
       <li><a href="/cgi-bin/qgis_mapserv.cgi?MAP=/web/projects/helloworld.qgs&SERVICE=WMS&REQUEST=GetProjectsettings">Browser CGI</a></li>
       <li><a href="/cgi-bin/qgis_mapserv.fcgi?MAP=/web/projects/helloworld.qgs&SERVICE=WMS&REQUEST=GetProjectsettings">Browser Fast CGI</a></li>
       <li><a href="/cgi-bin/show.cgi">Show CGI environment variables</a></li>
+      <li><a href="/?oauth2=true&MAP=/web/projects/helloworld.qgs&SERVICE=WMS&REQUEST=GetCapabilities">OAuth2 Python Wrapper</a></li>
   </ul>
   </body>
 </html>
